# dog

./: .gitignore  ChangeLog.md  LICENSE  README.md  datalog.txt  default.nix  dog.cabal  dog.nix
example/: Main.hs
src/Datalog/: AST.hs  Lexer.x  LexerUtils.hs  Parser.y  Pretty.hs  QQ.hs
test/: Main.hs
