name:                dog
version:             0.1.0.0
synopsis:            Lexer, Parser, QQ, Pretty-printer, interpreter for Datalog
description:         Datalog library and interpreter
homepage:            https://github.com/urbint/dog
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          david@urbint.com
copyright:           Urbint (c) 2018-2019
category:            Language
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    Datalog.AST
    Datalog.QQ
    Datalog.Parser
    Datalog.Pretty
    Datalog.Lexer
  other-modules:
    Datalog.LexerUtils
  build-depends:
    array,
    bytestring,
    attoparsec,
    base < 5,
    containers,
    deepseq,
    mtl,
    text,
    prettyprinter,
    template-haskell,
    hashable
  build-tools:
    alex,
    happy
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall

executable example
  main-is:
    Main.hs
  build-depends:
    base < 5,
    dog,
    bytestring,
    string-conversions,
    text
  hs-source-dirs:
    example
  default-language:
    Haskell2010

test-suite tests
  type:
    exitcode-stdio-1.0
  main-is:
    Main.hs
  hs-source-dirs:
    test
  build-depends:
    base < 5,
    bytestring,
    dog,
    hspec,
    QuickCheck,
    quickcheck-instances,
    string-conversions,
    text
  ghc-options:
    -Wall -threaded -rtsopts
  default-language:
    Haskell2010

source-repository head
  type: git
  location: https://github.com/urbint/dog.git
